[gd_scene load_steps=19 format=2]

[ext_resource path="res://src/entities/Clubman.gd" type="Script" id=1]
[ext_resource path="res://images/arm_with_club.png" type="Texture" id=2]
[ext_resource path="res://images/caveman_body.png" type="Texture" id=3]
[ext_resource path="res://images/cavemane_head.png" type="Texture" id=4]
[ext_resource path="res://shanders/SelectionCircle.tres" type="Material" id=5]
[ext_resource path="res://scenes/ui/HealthBar.tscn" type="PackedScene" id=6]
[ext_resource path="res://sounds/unit_produced_v1.wav" type="AudioStream" id=7]
[ext_resource path="res://sounds/confirm.wav" type="AudioStream" id=8]
[ext_resource path="res://sounds/attack.wav" type="AudioStream" id=9]

[sub_resource type="CapsuleShape2D" id=1]
radius = 6.5423
height = 12.8999

[sub_resource type="Animation" id=2]
length = 0.9
tracks/0/type = "value"
tracks/0/path = NodePath("Sprites/Arm:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.4, 0.5, 0.7, 0.9 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 1, -12 ), Vector2( -4, -16 ), Vector2( -4, -12 ), Vector2( 1, -12 ), Vector2( 1, -12 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprites/Arm:rotation_degrees")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.4, 0.5, 0.7, 0.9 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ 0.0, 72.5235, 0.0, 0.0, 0.0 ]
}
tracks/2/type = "method"
tracks/2/path = NodePath(".")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0.5 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [ "animation_signal", "Attack" ],
"method": "emit_signal"
} ]
}

[sub_resource type="Animation" id=3]
resource_name = "Death"
length = 2.5
tracks/0/type = "bezier"
tracks/0/path = NodePath("Sprites:rotation_degrees")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"points": PoolRealArray( 0, -0.25, 0, 0.36, 22.08, 90, -0.04, -46.32, 0.25, 0 ),
"times": PoolRealArray( 0, 0.5 )
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprites:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.5, 2.5 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}
tracks/2/type = "method"
tracks/2/path = NodePath(".")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 2.5 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [ "animation_signal", "Death" ],
"method": "emit_signal"
} ]
}

[sub_resource type="Animation" id=4]
resource_name = "Pray"
length = 2.0
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprites/Arm:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5, 1.5, 2 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 1, -12 ), Vector2( -0.999991, -13.3333 ), Vector2( -0.999991, -13.3333 ), Vector2( 1, -12 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprites/Arm:rotation_degrees")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.5, 1.5, 2 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ 0.0, 60.0, 60.0, 0.0 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Sprites/Head:rotation_degrees")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.5, 1.5, 2 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ 0.0, 30.0, 30.0, 0.0 ]
}

[sub_resource type="Animation" id=5]
loop = true
tracks/0/type = "bezier"
tracks/0/path = NodePath("Sprites:scale:y")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"points": PoolRealArray( 1, -0.25, 0, 0.25, 0, 0.93, -0.25, 0, 0.25, 0, 1, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 0.5, 1 )
}

[sub_resource type="CircleShape2D" id=6]
radius = 29.8431

[sub_resource type="CircleShape2D" id=7]
radius = 148.297

[sub_resource type="RectangleShape2D" id=8]
extents = Vector2( 11.756, 17.4738 )

[sub_resource type="CircleShape2D" id=9]
radius = 15.7414

[node name="Clubman" type="KinematicBody2D"]
rotation = -7.096e-06
script = ExtResource( 1 )

[node name="SelectionCircle" type="ColorRect" parent="."]
visible = false
material = ExtResource( 5 )
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -17.0
margin_top = -9.0
margin_right = 17.0
margin_bottom = 8.0
color = Color( 0.168627, 0.603922, 0.164706, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Sprites" type="Node2D" parent="."]

[node name="Body" type="Sprite" parent="Sprites"]
position = Vector2( 0.00355491, 0.0553507 )
scale = Vector2( 2, 2 )
texture = ExtResource( 3 )
offset = Vector2( -0.00172119, -8.05359 )

[node name="Head" type="Sprite" parent="Sprites"]
position = Vector2( -0.240597, -21.0043 )
scale = Vector2( 2, 2 )
texture = ExtResource( 4 )
offset = Vector2( 0.120355, 2.47625 )

[node name="Arm" type="Sprite" parent="Sprites"]
position = Vector2( 1, -12 )
scale = Vector2( 2, 2 )
texture = ExtResource( 2 )
offset = Vector2( -2.0219, -2.0134 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
visible = false
position = Vector2( -6.47279e-05, -2.56864 )
rotation = 1.5708
shape = SubResource( 1 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/Attack = SubResource( 2 )
anims/Death = SubResource( 3 )
anims/Pray = SubResource( 4 )
anims/Walk = SubResource( 5 )

[node name="AttackArea" type="Area2D" parent="."]
visible = false
position = Vector2( -5.6768e-05, 0 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="AttackArea"]
shape = SubResource( 6 )

[node name="SightArea" type="Area2D" parent="."]
visible = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="SightArea"]
shape = SubResource( 7 )

[node name="SelectionArea" type="Area2D" parent="."]
visible = false
monitoring = false
monitorable = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="SelectionArea"]
position = Vector2( 0.000115633, -16.2941 )
shape = SubResource( 8 )

[node name="HealthBar" parent="." instance=ExtResource( 6 )]
visible = false
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -10.0
margin_top = 2.0
margin_right = 9.99996
margin_bottom = 5.0
rect_min_size = Vector2( 20, 3 )

[node name="ProducedSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 7 )

[node name="ConfirmSound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 8 )

[node name="AttackSound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 9 )

[node name="PrayerArea" type="Area2D" parent="."]
collision_layer = 8
collision_mask = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="PrayerArea"]
shape = SubResource( 9 )
